--- a/IBM Machine Learning/classification_multigpu.ipynb
+++ b/IBM Machine Learning/classification_multigpu.ipynb
@@ -39,7 +39,7 @@
     "from tensorflow.keras.layers import Input, Conv2D, BatchNormalization, Dense, Add, Activation, Dropout, MaxPooling2D, GlobalAveragePooling2D\n",
     "\n",
     "import horovod.tensorflow.keras as hvd\n",
-    "from hvd.callbacks import LearningRateWarmupCallback, BroadcastGlobalVariablesCallback, MetricAverageCallback"
+    "from horovod.tensorflow.keras.callbacks import LearningRateWarmupCallback, BroadcastGlobalVariablesCallback, MetricAverageCallback"
    ]
   },
   {
